[project]
name = "CameraScrapper"
version = "0.1.0"
description = "Gets EU Traffic cams into a readable format sorted by highways"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "dhash>=1.4",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "pybktree>=1.1",
    "pyproj>=3.7.2",
    "tqdm>=4.67.1",
    "typed-ffmpeg>=3.11",
    "tzdata>=2025.3",
]
