[project]
name = "CameraParser"
version = "0.5.0"
description = "Gets EU Traffic cams into a readable format sorted by highways"
requires-python = ">=3.14"
target-version = "py314"
dependencies = [
    "dhash>=1.4",
    "pillow>=12.1.1",
    "pybktree>=1.1",
    "ruff>=0.15.4",
    "tqdm>=4.67.3",
    "typed-ffmpeg>=3.11",
    "tzdata>=2025.3",
    "lambert==1.0.0",
    "pip-system-certs>=5.3",
    "aiohttp>=3.13.3",
    "aiodns>=4.0.0",
    "natsort>=8.4.0",
    "winloop>=0.5.0",
]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "ASYNC",# flake8-async
    "INP",
    "PTH",
    "PERF",
    "FURB",
    "TRY"
]
ignore = ['TRY003']
